--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,13 +9,13 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px 0px 20px;
+    padding: 10px 70px 0px 50px;
 }
 
 .navbarLogo{
     width: 70px;
     height: 70px;
-    margin-left: 20px;
+    margin-left: 30px;
 }
 
 .btnNavbar{
@@ -41,4 +41,147 @@ nav{
     background-color: #BD0707;
     color: white;
 }
+
+.navbarPhoto{
+    width: 55px;
+    height: 55px;
+    border-radius: 100%;
+    -webkit-appearance: none;
+
+}
+
+
+.navbarPhoto:hover{
+    cursor: pointer;
+}
+
+.navbarCart{
+    width: 30px;
+    height: 30px;
+    margin-right: 35px;
+}
+
+.navbarRight{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 40px;
+}
+
+/* dropdown */
+.dropdown-toggle::after{
+    display: none !important;
+}
+
+.dropdown-menu{
+    margin-top: 15px !important;
+    border-radius: 10px;
+    box-shadow:  0px 4px 4px rgba(0, 0, 0, 0.25), 4px 4px 20px rgba(0, 0, 0, 0.25);
+    margin-left: -100px !important;
+    width: 180px;
+}
+
+.dropdown-menu::before{
+    position: absolute;
+    content: "";
+    top: -23px;
+    right: 15px;
+    border: 12px solid;
+    border-color: transparent transparent #fff transparent;
+}
+
+.dropdown-item{
+    display: flex !important;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 5px !important;
+    padding-right: 20px !important;
+}
+
+.dropCust {
+    font-size: 18px;
+    font-weight: 600;
+    margin-left: -20px;
+}
+
+.dropAdmin{
+    font-size: 18px;
+    font-weight: 600;
+    text-align: left;
+}
+
+.dropdown-img{
+    width: 30px;
+    height: 30px;
+}
+
+hr{
+    border-top: 3px solid #8b8989 !important;
+    margin: 0px ;
+}
+
+.navAddTopping{
+    margin-left: -10px;
+}
+/* /dropdown */
+
+
+/* Auth */
+.modal-content{
+    background-color: #E5E5E5;
+    width: 420px !important;
+    margin: 150px auto;
+}
+
+.authContainer{
+    padding: 30px 30px 10px 30px;
+}
+
+.authTitle{
+    color: #BD0707;
+    margin-bottom: 20px;
+}
+
+.inputAuth{
+    display: block;
+    width: 100%;
+    height: 50px;
+    border: 2px solid #BD0707;
+    background-color: rgba(224, 200, 200, 0.25);
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+
+.inputAuth:focus-visible{
+    padding-left: 10px;
+    outline: #BD0707;
+}
+
+.btnAuth{
+    width: 100%;
+    height: 45px;
+    background-color: #BD0707;
+    color: white;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+
+::placeholder{
+    color: #E0C8C840 25%;
+    padding-left: 10px;
+}
+
+.toRegist{
+    text-align: center;
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 400;
+}
+/* /Auth */
+
+
 /* /navbar */
