--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,800;1,400&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 *{
     padding: 0;
@@ -187,6 +187,15 @@ hr{
     font-size: 18px;
     font-weight: 400;
 }
+
+.toRegist strong{
+    cursor: pointer;
+}
+
+.toRegist strong:active{
+    font-weight: 900;
+
+}
 /* /Auth */
 
 
@@ -251,11 +260,13 @@ hr{
 /* profileCard */
 
 .profileCard{
+    display: flex;
+    flex-direction: row;
     width: 650px;
     background-color: #F6DADA;
     border-radius: 5px;
     justify-content: space-between;
-    padding: 20px 30px;
+    padding: 20px 30px 0px 30px;
 }
 
 .contentCardLeft{
@@ -312,10 +323,6 @@ hr{
     color: #974A4A;
 }
 
-.profileCard{
-    display: flex;
-    flex-direction: row;
-}
 
 .contentCardRight img{
     display: block ;
@@ -417,4 +424,157 @@ hr{
 }
 /* /addProduct */
 
+/* ListTransaction */
+table{
+    width: 80% !important;
+    margin-left: 100px;
+    font-family: 'Inter', sans-serif !important;
 
+}
+
+th{
+    background-color: #E5E5E5 !important;
+    font-weight: 900;
+}
+
+th,td{
+    border: 1px solid #828282 !important;
+
+}
+
+.tableContainer{
+    margin-top: 50px;
+}
+
+.tableContainer h1{
+    margin-bottom: 40px;
+    color: #BD0707;
+    font-weight: 600;
+
+}
+
+.tablePrice{
+    color: #061E99;
+    font-weight: 600;
+}
+
+.tableSuccess{
+    color: #78A85A;
+    font-weight: 600;
+}
+
+.tableWaiting{
+    color: #FF9900;
+    font-weight: 600;
+}
+
+.tableOtw{
+    color: #00D1FF;
+    font-weight: 600;
+}
+
+.tableCancel{
+    color: #E83939;
+    font-weight: 600;
+}
+
+.modal-transaction{
+    padding-right: 200px !important;
+}
+/* /ListTransaction */
+
+
+/* Detail-Product */
+.detailContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.detailLeft img{
+    width: 450px;
+    height: 555px;
+    margin-right: 100px;
+    border-radius: 10px;
+}
+
+.detailRight{
+    width: 600px;
+    height: 200px;
+}
+
+.detailRight h1{
+    color: #BD0707;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.priceProduct{
+    color: #974A4A;
+    font-size: 23px;
+    font-weight: 400;
+}
+
+.detailRight h3 {
+    color: #974A4A;
+    font-size: 24px;
+    font-weight: 800;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+.detailRight img{
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+}
+
+.topings{
+    width: 560px;
+    height: 230px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    margin-left: 40px;
+    overflow: scroll;
+}
+.topings::-webkit-scrollbar{
+    display: none;
+}
+
+.toping{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.toping p{
+    font-size: 16px;
+    font-weight: 500;
+    color: #BD0707;
+}
+
+.totalPriceToping {
+    display: flex;
+    justify-content: space-between;
+    font-size: 33px;
+    color: #974A4A;
+    font-weight: 900;
+    margin-top: 30px;
+}
+
+.btnProduct{
+    width: 100%;
+    height: 40px;
+    background-color: #BD0707;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 22px;
+}
+
+.btnProduct:active{
+    box-shadow: 0px 0px 5px grey;
+    
+}
+/* /Detail-Product */
