--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -49,7 +49,7 @@ span{
   font-weight:900;
 }
 
-.landing_page span p>p1{
+.p1{
   font-size: 23px;
   /* font-weight:900
   ; */
@@ -61,12 +61,9 @@ span{
 .landing_page span p p2>p3{
   font-weight: 700;
 }
-/* .landofdown{
+.landofdown{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start; */
-/* } */
+}
 .textofdown p{
   padding: 50px 0 20px 140px;
   color:#BD0707;
@@ -75,17 +72,22 @@ span{
   left: 150px;
   font-size: 35px;
   font-weight: 700; 
+  /* margin-left: 150px; */
 }
 
-.card{
+.card3{
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin: 0 0 80px 150px;
+  margin: 0 0 80px 0px;
+  /* border:1px solid black;
+  margin-left: 50px; */
 
 }
 .card2{
   background-color: #f6dada;
+  /* width: 15rem;
+  height: 10rem; */
 }
 
 
