--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -2,7 +2,7 @@
 
 
 .landing_page{
-  margin-top:20px;
+  margin-top:50px;
   color: white;
     /* width: 100%; */
 
@@ -91,14 +91,55 @@ span{
 }
 
 
+
+/* card */
+.landofdown{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  column-gap: 30px;
+  row-gap: 50px;
+  /* border: 1px solid black; */
+  width: 65rem;
+  height: 55rem;
+  /* border: 1px solid black; */
+  margin: 0 0 0 200px;
+}
+.imageP{
+  width: 100%;
+  border-radius: 10px 0px ;
+  height: 300px;
+}
+
+.card1{
+  background-color: #f6dada;
+  border-radius: 20px;
+  width: 250px;
+  height: 400px;
+}
+.card2{
+  /* border: 1px solid red; */
+  padding: 0 0 0 10px;
+  
+}
+
+
+
+/* card */
+
+
 /* font */
 .text1{
   color: #BD0707;
   font-size: 21px;
   font-weight: 900;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-bottom: 5px;
 }
 .text2{
   color:#974A4A;
   font-size: 17px;
   font-weight: 100;
+  font-weight: 400;
+  margin-left: 10px;
 }
