--- a/src/styles/product.module.css
+++ b/src/styles/product.module.css
@@ -8,10 +8,19 @@ span{
   /* border: 1px solid black; */
   display: flex;
   flex-direction: row;
-  margin:50px 50px 50px 50px;
+  margin:40px 50px 0px 50px;
+  column-gap: 100px;
 }
 .left{
   margin: 0 10px 0 100px ;
+  width: 436px;
+  height: 555px;
+  border-radius: 5px;
+}
+.left img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
 }
 .right{
   margin: 0 20px 20px 20px ;
@@ -24,12 +33,22 @@ span{
   /* border: 1px solid black; */
   display: grid;
   grid-template-columns: repeat(4,1fr);
+  width: 580px;
+  height: 280px;
+  overflow: scroll;
 }
 .toping{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 141px;
+  height: 137px;
+  text-align: center;
+  
+}
+.topings::-webkit-scrollbar{
+  display: none;
 }
 
 .toping>img{
@@ -56,8 +75,59 @@ span{
   border: none;
 }
 .price{
-  margin-top: 60px;
+  margin-top: 30px;
 }
+.check{
+  position: absolute;
+  width: 30px !important;
+  margin-top: -50px;
+  margin-left: 30px;
+}
+
+.imageToping{
+  width: 75px;
+  height: 85px;
+}
+
+.checkContainer {
+  display: block;
+  position: relative;
+  /* padding-left: 35px; */
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkContainer input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  display: none;
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  margin-left: 50px;
+}
+
+
+/* When the checkbox is checked, add a blue background */
+.checkContainer input:checked ~ .checkmark {
+  display: block;
+}
+
+
+
 /* font */
 *{
   font-family: "Nunito", sa ns-serif;
