--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -518,6 +518,20 @@ th,td{
 
 
 /* Detail-Product */
+.circle{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: red;
+    font-size: 0.7rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    margin: 0px 0px 15px 20px;
+}
+
 .detailContainer{
     display: flex;
     flex-direction: row;
